--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,6 @@
-{ "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }] }
+{
+  "version": 2,
+  "name": "React-Dashboard",
+  "builds": [{ "src": "main.tsx", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/src/main.tsx" }]
+}
