CHORE: UPDATED THE PROJECT

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,13 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/main.tsx",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "src/main.tsx" },
+    { "src": "/(.*)", "dest": "src/main.tsx" }
+  ]
 }
